# browser

./: .gitignore  Cargo.toml  dns_cacher_table.sql  dns_lookup_table.sql
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
dns_cacher/: Cargo.toml
dns_cacher/src/: main.rs
dns_provider/: Cargo.toml
dns_provider/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
mdparser/: Cargo.toml
mdparser/src/: lib.rs
sample/: Cargo.toml
sample/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
stacks/htmxparser/: Cargo.toml
stacks/htmxparser/src/: lib.rs
stacks/mdparser/: Cargo.toml
stacks/mdparser/src/: lib.rs
url_resolver/: Cargo.toml
url_resolver/mdparser/: Cargo.toml
url_resolver/mdparser/src/: lib.rs
url_resolver/src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
