[workspace]
resolver = "3"
members = [
    "url_resolver",
    "dns_cacher",
    "dns_provider",
    "frontend",
    "server",
    "utils",
]

[workspace.dependencies]
async-std = { version = "1.13.1", features = ["attributes"] }
directories = "6.0.0"
futures = "0.3.31"
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
pango = "0.21.0"
sqlx = { version = "0.8.6", features = [
    "mysql",
    "runtime-async-std",
    "sqlite",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
