[workspace]
resolver = "3"
members = [
    "dns_cacher",
    "dns_provider",
    "frontend",
    "server",
    "url_resolver",
    "url_resolver/mdparser",
    "utils",
]

[workspace.dependencies]
async-std = { version = "1.13.1", features = ["attributes"] }
directories = "6.0.0"
futures = "0.3.31"
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
libloading = "0.8.8"
fancy-regex = "0.16.1"
sqlx = { version = "0.8.6", features = [
    "mysql",
    "runtime-async-std",
    "sqlite",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utils = { path = "utils" }
